change winning display & fix  overlap users

--- a/style.css
+++ b/style.css
@@ -91,3 +91,18 @@ button {
 	width: 50px;
 	height: 50px;
 }
+@keyframes blink {
+	0% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+.blinking {
+	animation: blink 1s infinite;
+}
